fixed spacing issues

--- a/src/blocks/post/style.scss
+++ b/src/blocks/post/style.scss
@@ -76,7 +76,7 @@
 			width: 100%;
 		}
 	}
-	.uagb-post__image , .uagb-post__cta{
+	.uagb-post__image {
 		margin-bottom: 15px;
 	}
 	.uagb-post__title {
